Fix image layout

--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -12,15 +12,16 @@
     <div class="mt-5"></div>
     <h1>Members</h1>
     <div class="row my-5 align-items-start">
+        {% if members.photo %}
+        <div class="col-sm-12 col-md-12 col-lg-3">
+            <img src={{members.photo}} style="height: 350px; width: 250px;"/> 
+        </div>
+        {% endif %}
         <div class="col-auto" style="width:250px">
             <h3>{{ members.principle_investigator }}</h3> 
             <b>Principle Investigator</b>
         </div>
-        {% if members.photo %}
-        <div class="col-sm-12 col-md-12 col-lg-3">
-            <img src={{members.photo}} style="max-width:100%;"/> 
-        </div>
-        {% endif %}
+       
     </div>
 
     <hr/>
@@ -28,15 +29,16 @@
     <h2>Researchers</h2>
     {% for researcher in members.researchers %}
         <div class="row my-5">
+            {% if researcher.photo %}
+            <div class="col-sm-12 col-md-12 col-lg-3">
+                <img src={{researcher.photo}} style="height: 350px; width: 250px;"/> 
+            </div>
+            {% endif %}
             <div class="col-auto" style="width:250px;">
                 <h4>{{researcher.name_and_description}}</h4>
                 <b>Researcher</b>
             </div>
-            {% if researcher.photo %}
-            <div class="col-sm-12 col-md-12 col-lg-3">
-                <img src={{researcher.photo}} style="max-width:100%;"/> 
-            </div>
-            {% endif %}
+            
         </div>
     {% endfor %}
     <hr/ >
@@ -44,15 +46,16 @@
     <h2>Graduate Students</h2>
     {% for graduate in members.graduate_students %}
         <div class="row my-5">
+            {% if graduate.photo %}
+            <div class="col-sm-12 col-md-12 col-lg-3">
+                <img src={{graduate.photo}} style="height: 350px; width: 250px;"/> 
+            </div>
+            {% endif %}
             <div class="col-auto" style="width:250px;">
                 <h4>{{graduate.name}}</h4>
                 <b>Graduate Student</b>
             </div>
-            {% if graduate.photo %}
-            <div class="col-sm-12 col-md-12 col-lg-3">
-                <img src={{graduate.photo}} style="max-width:100%;"/> 
-            </div>
-            {% endif %}
+            
         </div>
     {% endfor %}
 
