--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -48,36 +48,24 @@
   <h1 class="text-center mb-5">Latest News</h1>
   <div class="row p-5">
     <div class="col-sm-12 col-md-12 col-lg-6">
-      <h3>2020</h3>
+      {% for year in site.data.frontpage.latest_news %}
+      <h3>{{year.name}}</h3>
+      {% for news in year.news %}
+      <p>{{news}}</p>
+      {% endfor %} {% endfor %}
+
+      <!-- <h3>2020</h3>
       <p>
         February 2020: Sylvia’s paper “Mothers of Pteridology” published in the
         American Fern Journal
       </p>
-      <p>June 2020: Alaskan Betula paper published</p>
+      <p>June 2020: Alaskan Betula paper published</p> -->
     </div>
     <div class="col-sm-12 col-md-12 col-lg-6">
       <h3>Recent Publications</h3>
-      <p>
-        Rowe CA, Lichvar RW and Wolf PG (2020) How Many Tree Species of Birch
-        Are in Alaska? Implications for Wetland Designations. Front. Plant Sci.
-        11:750. doi: 10.3389/fpls.2020.00750
-      </p>
-      <p>
-        Wolf PG, Rowe CA, Kinosian SP, Der JP, Lockhart PJ, Shepherd LD,
-        McLenachan PA, Thomson JA. 2019. Worldwide relationships in the fern
-        genus Pteridium (bracken) based on nuclear genome markers. American
-        Journal of Botany 106(10): 1365–1376
-      </p>
-      <p>
-        Rowe CA, PG Wolf, RW Lichvar. 2019. Do genetic differences explain the
-        ability of an alkaline shrub to grow in both uplands and wetlands?
-        Western North American Naturalist: 79: 260–269
-      </p>
-      <p>
-        Kinosian SP and JS Suissa. 2020. Mothers of Pteridology. American Fern
-        Journal 110(1), 3-19, (5 February 2020).
-        https://doi.org/10.1640/0002-8444-110.1.3
-      </p>
+      {% for pub in site.data.frontpage.recent_publications %}
+      <p>{{ pub }}</p>
+      {% endfor %}
     </div>
   </div>
 </div>
