--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
       <div class="container mt-5">
         <div class="d-flex justify-content-center">
           <img
-            src="https://paulwolflab.com/wp-content/uploads/2019/09/UAH_primary-e1568739071524-768x408.png"
+            src="/uploads/UAH_primary-e1568739071524-300x159.png"
             style="width: 300px"
           />
         </div>
