--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,12 +30,12 @@
           <div class="container-fluid">
             <div class="d-flex h-25">
               <img
-                src="https://paulwolflab.com/wp-content/uploads/2019/09/UAH_primary-e1568739071524-768x408.png"
+                src="/uploads/UAH_primary-e1568739071524-300x159.png"
                 style="width: 150px"
                 class="ms-3"
               />
             </div>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
               <div class="d-flex flex-row align-items-center">
                 <div class="d-flex flex-column">
                   <div class="col"><h4>{{site.title}}</h4></div>
